vix/tests/checker-corpus/reject/generic-lowering-unsupported.vix
struct Box<T> {
    value: T,
}

fn id<T>(x: T) -> T {
    x
}

pub fn main() -> Int {
    id(1)
}
